--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ nav li {
 
 nav>ul>li,
 .button-gold {
+    z-index: 2349;
 	border-radius: .3em;
 	text-transform: uppercase;
 	box-shadow: 0 3px 6px rgba(0, 0, 0, .16),
@@ -89,8 +90,15 @@ nav ul ul li a {
 	margin-top: 18%;
 }
 
+#début {
+    margin-top: 0;
+}
+
 #img-banniere {
-	width: 100%;
+	width: 40%;
+    z-index: 2000;
+    top: 40%;
+    position: relative;
 }
 
 
@@ -124,10 +132,10 @@ nav ul ul {
 }
 
 header {
-	height: 125px;
 	display: flex;
 	position: sticky;
 	top: 0;
+    z-index: 50;
 }
 
 
