--- a/SAE 1.5/style.css
+++ b/SAE 1.5/style.css
@@ -46,11 +46,14 @@ nav ul li a,
 	display: block;
 }
 
-
 nav ul li,
 .button-gold {
-	position: relative;
 	display: inline-block;
+
+}
+
+nav ul li {
+	position: relative;
 }
 
 
