--- a/style.css
+++ b/style.css
@@ -1,102 +1,85 @@
 @font-face {
-	font-family: "Pieces of Eight";
-	src: url(pieces_of_eight/Pieces\ of\ Eight.ttf);
+    font-family: "Pieces of Eight";
+    src: url(pieces_of_eight/Pieces\ of\ Eight.ttf);
 }
 
-footer {
-	padding: 3%;
+body {
+    margin: 0;
 }
-
 
 main {
-	background-color: #0e1922;
+    background-color: #e5dece;
 }
 
 nav {
-	margin: auto;
+    margin: auto;
 }
 
 nav li {
-	font-family: "Pieces of Eight";
-	font-size: 20px;
+    font-family: "Pieces of Eight";
+    font-size: 20px;
 }
 
-nav>ul>li,
+nav > ul > li,
 .button-gold {
-	border-radius: .3em;
-	text-transform: uppercase;
-	box-shadow: 0 3px 6px rgba(0, 0, 0, .16),
-		0 3px 6px rgba(110, 80, 20, .4),
-		inset 0 -2px 5px 1px rgba(139, 66, 8, 1),
-		inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
-	background-image: linear-gradient(160deg, #a54e07, #b47e11, #fef1a2, #bc881b, #a54e07);
-	border: 1px solid #a55d07;
-	text-shadow: 0 2px 2px rgba(250, 227, 133, 1);
-}
-
-nav>ul>li:not(:first-of-type) {
-	margin-left: 15px;
-}
-
-
-
-
-
-nav ul li,
-.button-gold {
-	display: inline-block;
-
-}
-
-nav ul li {
-	position: relative;
-}
-
-
-a {
-	text-decoration: none;
-}
-
-
-nav ul {
-	padding: 0;
-}
-
-
-nav ul ul {
-	max-height: 0;
-	overflow: hidden;
-	position: absolute;
-	top: 100%;
-	transition: max-height 1s ease-out;
-}
-
-
-nav ul li:hover>ul {
-	max-height: 200px;
-	transition: max-height 1s ease-in;
-}
-
-
-nav ul li:not(:hover)>ul {
-	max-height: 0;
-	transition: max-height 0.3s ease-out;
+    z-index: 2349;
+    border-radius: .3em;
+    text-transform: uppercase;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 
+                0 3px 6px rgba(110, 80, 20, .4), 
+                inset 0 -2px 5px 1px rgba(139, 66, 8, 1), 
+                inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
+    background-image: linear-gradient(160deg, #a54e07, #b47e11, #fef1a2, #bc881b, #a54e07);
+    border: 1px solid #a55d07;
+    text-shadow: 0 2px 2px rgba(250, 227, 133, 1);
 }
 
 nav ul li a,
-.button-gold>a {
-	padding: 15px 20px;
-	color: black;
-	display: block;
+.button-gold > a {
+    padding: 15px 20px;
+    color: black;
+    display: block;
+}
+
+nav ul li,
+.button-gold {
+    position: relative;
+    display: inline-block;
+}
+
+a {
+    text-decoration: none;
+}
+
+nav ul {
+    padding: 0;
+}
+
+nav ul ul {
+    max-height: 0;
+    overflow: hidden;
+    position: absolute;
+    top: 100%;
+    transition: max-height 1s ease-out;
+}
+
+nav ul li:hover > ul {
+    max-height: 200px;
+    transition: max-height 1s ease-in;
+}
+
+nav ul li:not(:hover) > ul {
+    max-height: 0;
+    transition: max-height 0.3s ease-out;
 }
 
 nav ul ul li a {
-	padding: 10px;
+    padding: 10px;
+    color: black;
 }
 
 #fin {
-	margin-top: 18%;
-	margin-bottom: 0;
+    margin-top: 18%;
 }
 
 #début {
@@ -104,72 +87,153 @@ nav ul ul li a {
 }
 
 #img-banniere {
-	width: 40%;
+    width: 40%;
+    z-index: 2000;
     top: 40%;
+    position: relative;
 }
 
-
 article {
-	padding: 2%;
-	margin: 40px;
-	background-image: url('images/parchemin.png');
-	background-size: cover;
+    background-image: radial-gradient(#f8e2d3, #c7b19b);
+    color: #583e23;
+    display: flex;
+    margin: 1em;
+    padding: 1em;
+    border-radius: 7px;
+    box-shadow: 0 0 1em black;
+    color-scheme: light;
+    text-shadow: none;
 }
 
 #milieu {
-	height: 400px;
+    height: 400px;
 }
 
-article>p {
-	padding: 3%;
+article > p {
+    padding: 3%;
 }
-
 
 #logo {
-	padding: 13px;
-	width: 11%;
-	height: auto;
-	max-height: 110px;
+    padding: 20px;
+    width: 11%;
+    height: auto;
 }
-
 
 header,
 footer,
 nav ul ul {
-	background-color: #9c162b;
+    background-color: #e5dece;
 }
 
 header {
-	display: flex;
-	position: sticky;
-	top: 0;
+    display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 50;
 }
 
-.intro-section {
-	display: flex;
-}
 .triple-image {
-	width: 30%;
-	height: auto;
+    width: 30%;
+    height: auto;
 }
 
-body,
-h2,
 p {
-	margin: 0;
+    margin: 0;
+    color: black;
+}
+
+footer {
+    height: 50px;
 }
 
 .left {
-	float: left;
+    float: left;
 }
 
 .right {
-	float: right;
+    float: right;
 }
 
-
 .image-seule {
-	width: 20%;
-	height: auto;
+    width: 20%;
+    height: auto;
     margin: 20px;
+}
+
+@media (max-width: 600px) {
+    #logo {
+        width: 30%;
+        padding: 10px;
+    }
+
+    nav ul li a {
+        padding: 10px;
+        font-size: 18px;
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #img-banniere {
+        width: 100%;
+        top: 20%;
+        position: relative;
+    }
+
+    .image-seule {
+        width: 80%;
+        margin: 10px auto;
+    }
+
+    article {
+        flex-direction: column;
+        margin: 0.5em;
+        padding: 0.5em;
+    }
+
+    .triple-image {
+        width: 90%;
+        margin: 5px 0;
+    }
+
+    article > p {
+        padding: 5%;
+    }
+
+    #fin {
+        margin-top: 10%;
+    }
+}
+
+@media (max-width: 1024px) {
+    #logo {
+        width: 15%;
+        padding: 15px;
+    }
+
+    nav ul li a {
+        font-size: 18px;
+    }
+
+    #img-banniere {
+        width: 70%;
+    }
+
+    .image-seule {
+        width: 50%;
+        margin: 15px auto;
+    }
+
+    article {
+        flex-direction: column;
+        margin: 0.5em;
+    }
+
+    .triple-image {
+        width: 80%;
+        margin: 10px auto;
+    }
 }
